[package]
name = "git_hours"
version = "0.1.0"
authors = ["Jonathan Neufeld <jneufeld@alumni.ubc.ca>"]
edition = "2021"

[dependencies]
chrono = "0.4"
regex = "1"

# Justification: convenience
#
# Feature-rich crates like clap are capable of more but donny doesn't need that.
# Conversely, writing arg parsing with the standard library is fine but not
# always convenient. This is somewhere inbetween.
pico-args = "0.5"